# Rust-Axum-Ganin-News-BE

./: Cargo.toml  LICENSE
src/: app.rs  data.rs  lib.rs  main.rs
src/app/: routes.rs
src/app/routes/: articles.rs  books.rs  fallback.rs  hello_world.rs  mirror_body_json.rs  mirror_body_string.rs  mod.rs  things.rs
src/data/: access.rs  articles.rs  books.rs  mod.rs
src/data/models/: article.rs  book.rs  mod.rs
